--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 	--buttonbg: #F9E1CC;
 	--bgorder: #f9f9f9;
     
+    --eye-icon: #7C756B;
+    --pin-button: #f9f9f9;
 }
 * {
 	font-family: "Syne" , sans-serif;
@@ -18,3 +20,5 @@
 	-ms-overflow-style: none; 
 	scrollbar-width: none; 
 }
+
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Neucha&family=Syne:wght@400..800&display=swap'); */
