--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,9 @@
 	--buttonbg: #F9E1CC;
     --eye-icon: #7C756B;
     --pin-button: #f9f9f9;
-    
 }
 * {
 	font-family: "Syne" , sans-serif;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Neucha&family=Syne:wght@400..800&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Neucha&family=Syne:wght@400..800&display=swap'); */
