--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
 	--main: #333333;
-	--primary:#EBDFD1;
+	--primary: #EBDFD1;
 	--secondary: #E9E8E6;
 	--buttonbg: #F9E1CC;
 	--bgorder: #f9f9f9;
@@ -19,6 +19,10 @@
 .scrollbar-hide {
 	-ms-overflow-style: none; 
 	scrollbar-width: none; 
+}
+
+* {
+	font-family: "Syne", sans-serif;
 }
 
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Neucha&family=Syne:wght@400..800&display=swap'); */
