--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@
 * {
 	font-family: "Syne" , sans-serif;
 }
+.scrollbar-hide::-webkit-scrollbar {
+	display: none;
+  }
+.scrollbar-hide {
+	-ms-overflow-style: none; 
+	scrollbar-width: none; 
+}
