--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,6 @@
   --bgorder: #f9f9f9;
 }
 * {
-  font-family: "Syne", sans-serif;
+  /* font-family: "Syne", sans-serif; */
+  font-family: "Sansation" ,sans-serif;
 }
