--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --primary: #ebdfd1;
   --secondary: #e9e8e6;
   --bgorder: #f9f9f9;
+  --buttonbg:#f9e1cc;
 }
 * {
   /* font-family: "Syne", sans-serif; */
