--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,24 @@
 	--secondary: #E9E8E6;
 	--buttonbg: #F9E1CC;
 	--bgorder: #f9f9f9;
-    --eye-icon: #7C756B;
-    --pin-button: #f9f9f9;
+	--eye-icon: #7C756B;
+	--pin-button: #f9f9f9;
+	--completed: #1388081F;
+	--rejected: #FF00001F;
+	--ongoing:#ADA7071F;
 }
 
 * {
 	font-family: "Sansation", sans-serif;
 }
+
 .scrollbar-hide::-webkit-scrollbar {
 	display: none;
-  }
+}
+
 .scrollbar-hide {
-	-ms-overflow-style: none; 
-	scrollbar-width: none; 
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
 
 * {
