--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
 	--buttonbg: #F9E1CC;
 	--bgorder: #f9f9f9;
     --eye-icon: #7C756B;
-    --pin-button: #f9f9f9;
+    --completed: #1388081F;
+    --ongoing: #ADA7071F;
+    --rejected: #FF00001F;
 }
 
 * {
